--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -1,8 +1,15 @@
 <template name="shopEdit">
     <section id="shopEdit">
+        {{ #with shop }}
         <form class="shopEditForm">
-            <input type="text" name="title" value="{{ shop.title }}" />
+            <label for="shopTitle">title</label>
+            <input type="text" name="title" id="shopTitle" value="{{ title }}" />
+            <label for="shopSubtitle">subtitle</label>
+            <input type="text" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
+            <label for="shopDescription">description</label>
+            <textarea name="description" id="shopDescription">{{ description }}</textarea>
             <button type="submit">Save</button>
         </form>
+        {{ /with }}
     </section>
 </template>
