--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -1,14 +1,20 @@
 <template name="shopEdit">
     <section id="shopEdit">
         {{ #with shop }}
-        <form class="shopEditForm">
-            <label for="shopTitle">title</label>
-            <input type="text" name="title" id="shopTitle" value="{{ title }}" />
-            <label for="shopSubtitle">subtitle</label>
-            <input type="text" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
-            <label for="shopDescription">description</label>
-            <textarea name="description" id="shopDescription">{{ description }}</textarea>
-            <button type="submit">Save</button>
+        <form role="form" class="shopEditForm">
+            <div class="form-group">
+                <label for="shopTitle">title</label>
+                <input type="text" name="title" id="shopTitle" class="form-control" value="{{ title }}" />
+            </div>
+            <div class="form-group">
+                <label for="shopSubtitle">subtitle</label>
+                <input type="text" name="subtitle" id="shopSubtitle" class="form-control" value="{{ subtitle }}" />
+            </div>
+            <div class="form-group">
+                <label for="shopDescription">description</label>
+                <textarea name="description" id="shopDescription" class="form-control">{{ description }}</textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Save</button>
         </form>
         {{ /with }}
     </section>
