--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,14 +1,8 @@
 <template name="menu">
     <nav class="menu">
-        <ul>
+        <ul class="nav nav-pills nav-stacked" role="tablist">
             <li>
-                1
-            </li>
-            <li>
-                2
-            </li>
-            <li>
-                3
+                <a href="{{pathFor route='marketplace'}}">Marketplace</a>
             </li>
         </ul>
     </nav>
