--- a/client/my_shops_menu/my_shops_menu.html
+++ b/client/my_shops_menu/my_shops_menu.html
@@ -1,6 +1,6 @@
 <template name="myShopsMenu">
     <nav class="my-shops-menu">
-        <ul>
+        <ul class="nav nav-pills nav-stacked" role="tablist">
             <li>
                 <a href="/management/shops/new">Add shop</a>
             </li>
