--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -2,8 +2,8 @@
     <section id="shopEdit">
         {{ #with shop }}
         <div class="imagesBlock">
-            <canvas id="coverCanvas"></canvas>
-            <canvas id="logoCanvas" width="150px" height="150px"></canvas>
+            <img id="coverImage" />
+            <img id="logoImage" />
         </div>
         <input type="file" name="logo" id="shopLogo" accept="image/*" />
         <form class="shopEditForm">
