--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -2,39 +2,8 @@
     <section id="shopEdit">
         {{ #with shop }}
         <div class="imagesBlock">
-            <button class="uploadBtn btn btn-icon">
-                {{> iconUpload }}
-            </button>
-            <nav class="uploadMenu">
-                <svg class="tip" height="8px" width="48px" viewbox="0 0 48 8">
-                    <polygon points="16,8 24,0 32,8" fill="red"></polygon>
-                </svg>
-                <ul class="menu">
-                    <li>
-                        <button class="uploadLogoBtn btn btn-icon">
-                            {{> iconCircle }}
-                            <input type="file" name="logo" id="uploadLogoFile" accept="image/*" />
-                        </button>
-                    </li>
-                    <li>
-                        <button class="uploadCoverBtn btn btn-icon">
-                            {{> iconRect }}
-                            <input type="file" name="cover" id="uploadCoverFile" accept="image/*" />
-                        </button>
-                    </li>
-                </ul>
-            </nav>
-            <button class="cancelBtn btn btn-icon">
-                {{> iconCancel }}
-            </button>
-            <button class="saveBtn btn btn-icon">
-                {{> iconOk }}
-            </button>
-
-            <img class="cover" src="{{ cover }}" />
-            <img class="logo" src="{{ logo }}" />
-
-            <canvas id="canvas"></canvas>
+            {{>shopEditImagesView}}
+            {{>shopEditImagesEdit}}
         </div>
         <form class="shopEditForm">
             <div>
