--- a/client/management/shops/edit/imeges-view.html
+++ b/client/management/shops/edit/imeges-view.html
@@ -24,7 +24,11 @@
                 </ul>
             </nav>
         </nav>
+        {{ #if cover }}
         <img class="cover" src="{{ cover }}" />
+        {{ /if }}
+        {{ #if logo }}
         <img class="logo" src="{{ logo }}" />
+        {{ /if }}
     </div>
 </template>
