--- a/client/management/shops/edit/imeges-view.html
+++ b/client/management/shops/edit/imeges-view.html
@@ -1,6 +1,7 @@
 <template name="shopEditImagesView">
     <div class="images-view">
         <nav class="context-buttons">
+            {{ test }}
             <button class="uploadBtn btn btn-icon">
                 {{> iconUpload }}
             </button>
@@ -28,7 +29,7 @@
         <img class="cover" src="{{ cover }}" />
         {{ /if }}
         {{ #if logo }}
-        <img class="logo" src="{{ logo }}" />
+        <img class="logo" src="{{ logo.url }}" />
         {{ /if }}
     </div>
 </template>
