--- a/client/management/shops/edit/imeges-view.html
+++ b/client/management/shops/edit/imeges-view.html
@@ -26,7 +26,7 @@
             </nav>
         </nav>
         {{ #if cover }}
-        <img class="cover" src="{{ cover }}" />
+        <img class="cover" src="{{ cover.url }}" />
         {{ /if }}
         {{ #if logo }}
         <img class="logo" src="{{ logo.url }}" />
