--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,6 +1,6 @@
 <template name="menu">
     <nav id="menu">
-        <ul class="nav nav-pills nav-stacked" role="tablist">
+        <ul role="tablist">
             <li>
                 <a href="{{pathFor route='marketplace'}}">Marketplace</a>
             </li>
