--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -7,29 +7,8 @@
         </div>
         <div class="container">
             <h2>Details</h2>
-            <form class="shopEditForm">
-                <h3>General info</h3>
-                <div>
-                    <label for="shopTitle">Title:</label>
-                    <input type="text" name="title" id="shopTitle" value="{{ title }}" />
-                </div>
-                <div>
-                    <label for="shopSubtitle">Subtitle:</label>
-                    <input type="text" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
-                </div>
-                <div>
-                    <label for="shopDescription">Description:</label>
-                    <textarea name="description" id="shopDescription">{{ description }}</textarea>
-                </div>
-                <div>
-                    <label for="shopTax">Tax rate:</label>
-                    <input type="text" name="tax" id="shopTax" value="{{ tax }}" />
-                </div>
-                <button type="submit">Save</button>
-            </form>
+            {{> managementShopsEditGeneral }}
             {{> managementShopsEditTracking }}
-            <h3>Payment info</h3>
-
         </div>
         {{ /with }}
     </section>
