--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -9,6 +9,12 @@
             <h2>Details</h2>
             {{> managementShopsEditGeneral }}
             {{> managementShopsEditTracking }}
+            {{> managementShopsEditPayout }}
+            {{> managementShopsEditPlatforms }}
+            {{> managementShopsEditProducts }}
+            {{> managementShopsEditManagers }}
+            {{> managementShopsEditOrders }}
+            {{> managementShopsEditReviews }}
         </div>
         {{ /with }}
     </section>
