--- a/client/management/shops/edit/products/products.html
+++ b/client/management/shops/edit/products/products.html
@@ -1,5 +1,9 @@
 <template name="managementShopsEditProducts">
     <div class="products">
         <h3>Products</h3>
+        <button class="createProductBtn">Add new</button>
+        {{ #each products }}
+            product
+        {{ /each }}
     </div>
 </template>
