--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -1,4 +1,4 @@
-<template name="shopEdit">
+<template name="managementShopEdit">
     <section id="shopEdit">
         {{ #with shop }}
         <div class="imagesBlock">
