--- a/client/management/products/edit/edit.html
+++ b/client/management/products/edit/edit.html
@@ -6,6 +6,10 @@
         {{ #with product }}
 
         {{> managementProductsEditImages }}
+        <div class="container">
+            <h2>Details</h2>
+            {{> managementProductsEditGeneral }}
+        </div>
 
         {{ /with }}
     </div>
