--- a/client/management/products/edit/general/general.html
+++ b/client/management/products/edit/general/general.html
@@ -36,5 +36,16 @@
                 Out of stock
             </label>
         </div>
+        <div>
+            <label>Condition:</label>
+            <label>
+                <input type="radio" name="condition" value="new" checked="{{ isNew }}" />
+                New
+            </label>
+            <label>
+                <input type="radio" name="condition" value="used" checked="{{ isUsed }}" />
+                Used
+            </label>
+        </div>
     </div>
 </template>
