--- a/client/management/products/edit/edit.html
+++ b/client/management/products/edit/edit.html
@@ -9,6 +9,7 @@
         <div class="container">
             <h2>Details</h2>
             {{> managementProductsEditGeneral }}
+            {{> managementProductsEditVisibility }}
         </div>
 
         {{ /with }}
