--- a/client/management/products/edit/edit.html
+++ b/client/management/products/edit/edit.html
@@ -10,6 +10,7 @@
             <h2>Details</h2>
             {{> managementProductsEditGeneral }}
             {{> managementProductsEditVisibility }}
+            {{> managementProductsEditInventoryManagement }}
         </div>
 
         {{ /with }}
