--- a/client/management/products/edit/edit.html
+++ b/client/management/products/edit/edit.html
@@ -11,6 +11,7 @@
             {{> managementProductsEditGeneral }}
             {{> managementProductsEditVisibility }}
             {{> managementProductsEditInventoryManagement }}
+            {{> managementProductsEditReviews }}
         </div>
 
         {{ /with }}
