--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -1,5 +1,8 @@
 <template name="managementShopEdit">
     <section id="shopEdit">
+        <button class="menuBtn btn btn-icon">
+            {{> iconMenu}}
+        </button>
         {{ #with shop }}
         <div class="imagesBlock">
             {{>shopEditImagesView}}
