--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -1,3 +1,8 @@
 <template name="marketplace">
-    Marketplace
+    <div class="marketplace">
+        <button class="menuBtn btn btn-icon">
+            {{> iconMenu}}
+        </button>
+        Marketplace
+    </div>
 </template>
