--- a/client/management/shops/edit/general/general.html
+++ b/client/management/shops/edit/general/general.html
@@ -1,21 +1,31 @@
 <template name="managementShopsEditGeneral">
     <div class="general">
-        <h3>General info</h3>
-        <div>
-            <label for="shopTitle">Title:</label>
-            <input type="text" name="title" id="shopTitle" value="{{ title }}" />
-        </div>
-        <div>
-            <label for="shopSubtitle">Subtitle:</label>
-            <input type="text" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
-        </div>
-        <div>
-            <label for="shopDescription">Description:</label>
-            <textarea name="description" id="shopDescription">{{ description }}</textarea>
-        </div>
-        <div>
-            <label for="shopTax">Tax rate:</label>
-            <input type="text" name="tax" id="shopTax" value="{{ payments.tax }}" />
-        </div>
+        <form class="form-horizontal" role="form">
+            <h3>General info</h3>
+            <div class="form-group">
+                <label for="shopTitle" class="col-sm-2 control-label">Title:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="title" id="shopTitle" value="{{ title }}" placeholder="Title" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="shopSubtitle" class="col-sm-2 control-label">Subtitle:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="shopDescription" class="col-sm-2 control-label">Description:</label>
+                <div class="col-sm-10">
+                    <textarea name="description" class="form-control" id="shopDescription">{{ description }}</textarea>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="shopTax" class="col-sm-2 control-label">Tax rate:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="tax" id="shopTax" value="{{ payments.tax }}" />
+                </div>
+            </div>
+        </form>
     </div>
 </template>
