--- a/client/management/shops/edit/general/general.html
+++ b/client/management/shops/edit/general/general.html
@@ -1,7 +1,7 @@
 <template name="managementShopsEditGeneral">
     <div class="general">
         <form class="form-horizontal" role="form">
-            <h3>General info</h3>
+            <legend>General info</legend>
             <div class="form-group">
                 <label for="shopTitle" class="col-sm-2 control-label">Title:</label>
                 <div class="col-sm-10">
