--- a/client/management/shops/edit/managers/managers.html
+++ b/client/management/shops/edit/managers/managers.html
@@ -1,5 +1,5 @@
 <template name="managementShopsEditManagers">
     <div class="managers">
-        <h3>Managers</h3>
+        <legend>Managers</legend>
     </div>
 </template>
