--- a/client/management/shops/edit/orders/orders.html
+++ b/client/management/shops/edit/orders/orders.html
@@ -1,5 +1,5 @@
 <template name="managementShopsEditOrders">
     <div class="orders">
-        <h3>Orders</h3>
+        <legend>Orders</legend>
     </div>
 </template>
