--- a/client/management/shops/edit/payout/payout.html
+++ b/client/management/shops/edit/payout/payout.html
@@ -1,5 +1,5 @@
 <template name="managementShopsEditPayout">
     <div class="payout">
-        <h3>Payout settings</h3>
+        <legend>Payout settings</legend>
     </div>
 </template>
