--- a/client/management/shops/edit/platforms/platforms.html
+++ b/client/management/shops/edit/platforms/platforms.html
@@ -1,5 +1,5 @@
 <template name="managementShopsEditPlatforms">
     <div class="platforms">
-        <h3>Platforms</h3>
+        <legend>Platforms</legend>
     </div>
 </template>
