--- a/client/management/shops/edit/tracking/tracking.html
+++ b/client/management/shops/edit/tracking/tracking.html
@@ -1,7 +1,7 @@
 <template name="managementShopsEditTracking">
     <div class="tracking">
         <form class="form-horizontal" role="form">
-            <h3>Analytics</h3>
+            <legend>Analytics</legend>
             <div class="form-group">
                 <label for="shopGoogleAnalyticsId" class="col-sm-2 control-label">Google Analytics ID:</label>
                 <div class="col-sm-10">
