--- a/client/management/shops/edit/products/products.html
+++ b/client/management/shops/edit/products/products.html
@@ -1,6 +1,6 @@
 <template name="managementShopsEditProducts">
     <div class="products">
-        <h3>Products</h3>
+        <legend>Products</legend>
         <button class="createProductBtn">Add new</button>
         {{ #each products }}
             <a href="{{pathFor route='products.edit' data=this }}">
