--- a/client/management/products/edit/inventory_management/inventory_management.html
+++ b/client/management/products/edit/inventory_management/inventory_management.html
@@ -1,5 +1,5 @@
 <template name="managementProductsEditInventoryManagement">
     <div class="inventoryManagement">
-        <h3>Inventory management</h3>
+        <legend>Inventory management</legend>
     </div>
 </template>
