--- a/client/management/products/edit/reviews/reviews.html
+++ b/client/management/products/edit/reviews/reviews.html
@@ -1,5 +1,5 @@
 <template name="managementProductsEditReviews">
     <div class="reviews">
-        <h3>Reviews</h3>
+        <legend>Reviews</legend>
     </div>
 </template>
