--- a/client/management/products/edit/general/general.html
+++ b/client/management/products/edit/general/general.html
@@ -1,51 +1,69 @@
 <template name="managementProductsEditGeneral">
     <div class="general">
-        <h3>General info</h3>
-        <div>
-            <label for="productTitle">Title:</label>
-            <input type="text" name="title" id="productTitle" value="{{ title }}" />
-        </div>
-        <div>
-            <label for="productSubtitle">Subtitle:</label>
-            <input type="text" name="subtitle" id="productSubtitle" value="{{ subtitle }}" />
-        </div>
-        <div>
-            <label for="productDescription">Description:</label>
-            <textarea name="description" id="productDescription">{{ description }}</textarea>
-        </div>
-        <div>
-            <label for="productPrice">Price:</label>
-            <input type="text" name="price" id="productPrice" value="{{ price }}" />
-        </div>
-        <div>
-            <label for="productShippingCost">Shipping cost:</label>
-            <input type="text" name="shippingCost" id="productShippingCost" value="{{ shipping.cost }}" />
-        </div>
-        <div>
-            <label for="productShippingWeight">Shipping weight:</label>
-            <input type="text" name="shippingWeight" id="productShippingWeight" value="{{ shipping.weight }}" />
-        </div>
-        <div>
-            <label>Availability:</label>
-            <label>
-                <input type="radio" name="availability" value="inStock" checked="{{ isInStock }}" />
-                In stock
-            </label>
-            <label>
-                <input type="radio" name="availability" value="outOfStock" checked="{{ isOutOfStock }}" />
-                Out of stock
-            </label>
-        </div>
-        <div>
-            <label>Condition:</label>
-            <label>
-                <input type="radio" name="condition" value="new" checked="{{ isNew }}" />
-                New
-            </label>
-            <label>
-                <input type="radio" name="condition" value="used" checked="{{ isUsed }}" />
-                Used
-            </label>
-        </div>
+        <form class="form-horizontal" role="form">
+            <legend>General info</legend>
+            <div class="form-group">
+                <label for="productTitle" class="col-sm-2 control-label">Title:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="title" id="productTitle" value="{{ title }}" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="productSubtitle" class="col-sm-2 control-label">Subtitle:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="subtitle" id="productSubtitle" value="{{ subtitle }}" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="productDescription" class="col-sm-2 control-label">Description:</label>
+                <div class="col-sm-10">
+                    <textarea name="description" class="form-control" id="productDescription">{{ description }}</textarea>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="productPrice" class="col-sm-2 control-label">Price:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="price" id="productPrice" value="{{ price }}" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="productShippingCost" class="col-sm-2 control-label">Shipping cost:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="shippingCost" id="productShippingCost" value="{{ shipping.cost }}" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="productShippingWeight" class="col-sm-2 control-label">Shipping weight:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="shippingWeight" id="productShippingWeight" value="{{ shipping.weight }}" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Availability:</label>
+                <div class="col-sm-10">
+                    <label class="radio-inline">
+                        <input type="radio" name="availability" value="inStock" checked="{{ isInStock }}" />
+                        In stock
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" name="availability" value="outOfStock" checked="{{ isOutOfStock }}" />
+                        Out of stock
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Condition:</label>
+                <div class="col-sm-10">
+                    <label class="radio-inline">
+                        <input type="radio" name="condition" value="new" checked="{{ isNew }}" />
+                        New
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" name="condition" value="used" checked="{{ isUsed }}" />
+                        Used
+                    </label>
+                </div>
+            </div>
+        </form>
     </div>
 </template>
