--- a/client/management/products/edit/visibility/visibility.html
+++ b/client/management/products/edit/visibility/visibility.html
@@ -1,12 +1,14 @@
 <template name="managementProductsEditVisibility">
     <div class="visibility">
-        <h3>Visibility</h3>
-        <div>
-            <p>Information about visibility</p>
-            <label>
-                <input type="checkbox" name="isPublic" checked="{{ isPublic }}" />
-                Visible
-            </label>
-        </div>
+        <form class="form-horizontal" role="form">
+            <legend>Visibility</legend>
+            <p class="help-block">Information about visibility</p>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="isPublic" checked="{{ isPublic }}" />
+                    Visible
+                </label>
+            </div>
+        </form>
     </div>
 </template>
