--- a/client/management/shops/edit/managers/managers.html
+++ b/client/management/shops/edit/managers/managers.html
@@ -1,5 +1,7 @@
 <template name="managementShopsEditManagers">
     <div class="managers">
-        <legend>Managers</legend>
+        <div class="container">
+            <legend>Managers</legend>
+        </div>
     </div>
 </template>
