--- a/client/management/shops/edit/orders/orders.html
+++ b/client/management/shops/edit/orders/orders.html
@@ -1,5 +1,7 @@
 <template name="managementShopsEditOrders">
     <div class="orders">
-        <legend>Orders</legend>
+        <div class="container">
+            <legend>Orders</legend>
+        </div>
     </div>
 </template>
