--- a/client/management/shops/edit/payout/payout.html
+++ b/client/management/shops/edit/payout/payout.html
@@ -1,5 +1,7 @@
 <template name="managementShopsEditPayout">
     <div class="payout">
-        <legend>Payout settings</legend>
+        <div class="container">
+            <legend>Payout settings</legend>
+        </div>
     </div>
 </template>
