--- a/client/management/shops/edit/platforms/platforms.html
+++ b/client/management/shops/edit/platforms/platforms.html
@@ -1,5 +1,7 @@
 <template name="managementShopsEditPlatforms">
     <div class="platforms">
-        <legend>Platforms</legend>
+        <div class="container">
+            <legend>Platforms</legend>
+        </div>
     </div>
 </template>
