--- a/client/management/shops/edit/visibility/visibility.html
+++ b/client/management/shops/edit/visibility/visibility.html
@@ -1,14 +1,16 @@
 <template name="managementShopsEditVisibility">
     <div class="visibility">
-        <form class="form-horizontal" role="form">
-            <legend>Visibility</legend>
-            <p class="help-block">Information about visibility</p>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="isPublic" checked="{{ isPublic }}" />
-                    Visible
-                </label>
-            </div>
-        </form>
+        <div class="container">
+            <form class="form-horizontal" role="form">
+                <legend>Visibility</legend>
+                <p class="help-block">Information about visibility</p>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="isPublic" checked="{{ isPublic }}" />
+                        Visible
+                    </label>
+                </div>
+            </form>
+        </div>
     </div>
 </template>
