--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,6 +1,6 @@
 <template name="menu">
     <nav id="menu">
-        <ul role="tablist">
+        <ul class="nav nav-pills nav-stacked">
             <li>
                 <a href="{{pathFor route='marketplace'}}">Marketplace</a>
             </li>
