--- a/client/management/shops/edit/general/general.html
+++ b/client/management/shops/edit/general/general.html
@@ -1,31 +1,33 @@
 <template name="managementShopsEditGeneral">
     <div class="general">
-        <form class="form-horizontal" role="form">
-            <legend>General info</legend>
-            <div class="form-group">
-                <label for="shopTitle" class="col-sm-2 control-label">Title:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="title" id="shopTitle" value="{{ title }}" placeholder="Title" />
+        <div class="container">
+            <form class="form-horizontal" role="form">
+                <legend>General info</legend>
+                <div class="form-group">
+                    <label for="shopTitle" class="col-sm-2 control-label">Title:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="title" id="shopTitle" value="{{ title }}" placeholder="Title" />
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="shopSubtitle" class="col-sm-2 control-label">Subtitle:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
+                <div class="form-group">
+                    <label for="shopSubtitle" class="col-sm-2 control-label">Subtitle:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="shopDescription" class="col-sm-2 control-label">Description:</label>
-                <div class="col-sm-10">
-                    <textarea name="description" class="form-control" id="shopDescription">{{ description }}</textarea>
+                <div class="form-group">
+                    <label for="shopDescription" class="col-sm-2 control-label">Description:</label>
+                    <div class="col-sm-10">
+                        <textarea name="description" class="form-control" id="shopDescription">{{ description }}</textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="shopTax" class="col-sm-2 control-label">Tax rate:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="tax" id="shopTax" value="{{ payments.tax }}" />
+                <div class="form-group">
+                    <label for="shopTax" class="col-sm-2 control-label">Tax rate:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="tax" id="shopTax" value="{{ payments.tax }}" />
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </template>
