--- a/client/management/shops/edit/reviews/reviews.html
+++ b/client/management/shops/edit/reviews/reviews.html
@@ -1,5 +1,7 @@
 <template name="managementShopsEditReviews">
     <div class="reviews">
-        <legend>Reviews</legend>
+        <div class="container">
+            <legend>Reviews</legend>
+        </div>
     </div>
 </template>
