--- a/client/management/shops/edit/tracking/tracking.html
+++ b/client/management/shops/edit/tracking/tracking.html
@@ -1,13 +1,15 @@
 <template name="managementShopsEditTracking">
     <div class="tracking">
-        <form class="form-horizontal" role="form">
-            <legend>Analytics</legend>
-            <div class="form-group">
-                <label for="shopGoogleAnalyticsId" class="col-sm-2 control-label">Google Analytics ID:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" name="googleAnalyticsId" id="shopGoogleAnalyticsId" value="{{ tracking.googleAnalyticsId }}" />
+        <div class="container">
+            <form class="form-horizontal" role="form">
+                <legend>Analytics</legend>
+                <div class="form-group">
+                    <label for="shopGoogleAnalyticsId" class="col-sm-2 control-label">Google Analytics ID:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="googleAnalyticsId" id="shopGoogleAnalyticsId" value="{{ tracking.googleAnalyticsId }}" />
+                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </template>
