--- a/client/marketplace/marketplace.html
+++ b/client/marketplace/marketplace.html
@@ -1,8 +1,5 @@
 <template name="marketplace">
     <div class="marketplace">
-        <button class="menuBtn btn btn-icon">
-            {{> iconMenu}}
-        </button>
-        Marketplace
+        <h1>Marketplace</h1>
     </div>
 </template>
