--- a/client/management/shops/edit/payout/payout.html
+++ b/client/management/shops/edit/payout/payout.html
@@ -1,7 +1,5 @@
 <template name="managementShopsEditPayout">
     <div class="payout">
-        <div class="container">
-            <legend>Payout settings</legend>
-        </div>
+        <legend>PayPal accounts</legend>
     </div>
 </template>
