--- a/client/management/shops/edit/products/products.html
+++ b/client/management/shops/edit/products/products.html
@@ -1,17 +1,37 @@
 <template name="managementShopsEditProducts">
     <div class="products">
         <div class="container">
-            <legend>Products</legend>
-            <button class="createProductBtn btn btn-default">Add new</button>
+            <legend>
+                Products
+                <button class="createProductBtn pull-right">
+                    {{> iconAdd }}
+                </button>
+            </legend>
+            <div class="row">
             {{ #each products }}
-                <a href="{{pathFor route='products.edit' data=this }}">
-                    {{#if title}}
-                    {{title}}
-                    {{else}}
-                    <i>Draft product</i>
-                    {{/if}}
-                </a>
+                <div class="col-xs-6 col-sm-4">
+                    <a class="product-card" href="{{pathFor route='products.edit' data=this }}">
+                        <img src="">
+                        <div class="info">
+                            <h3>
+                                {{ #if title }}
+                                    {{title}}
+                                {{ else }}
+                                    <i>Draft product</i>
+                                {{ /if }}
+                            </h3>
+                            <span class="price">
+                                {{ #if price }}
+                                    {{price}}
+                                {{ else }}
+                                    <i>No price specified</i>
+                                {{ /if }}
+                            </span>
+                        </div>
+                    </a>
+                </div>
             {{ /each }}
+            </div>
         </div>
     </div>
 </template>
