--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -6,12 +6,12 @@
             {{>shopEditImagesEdit}}
         </div>
         <div class="container">
-            <h2>Details</h2>
+            <h2 class="page-header">Details</h2>
             {{> managementShopsEditGeneral }}
             {{> managementShopsEditVisibility }}
         </div>
         <div class="container">
-            <h2>Payout settings</h2>
+            <h2 class="page-header">Payout settings</h2>
             {{> managementShopsEditPayout }}
         </div>
         {{> managementShopsEditProducts }}
@@ -20,7 +20,7 @@
         {{> managementShopsEditManagers }}
         {{> managementShopsEditReviews }}
         <div class="container">
-            <h2>Additional</h2>
+            <h2 class="page-header">Additional</h2>
             {{> managementShopsEditTracking }}
         </div>
         {{ /with }}
