--- a/client/management/shops/edit/payout/payout.html
+++ b/client/management/shops/edit/payout/payout.html
@@ -1,5 +1,10 @@
 <template name="managementShopsEditPayout">
     <div class="payout">
-        <legend>PayPal accounts</legend>
+        <legend>
+            PayPal accounts
+            <button class="createProductBtn pull-right" data-toggle="tooltip" data-placement="left" title="Add new product">
+                {{> iconAdd }}
+            </button>
+        </legend>
     </div>
 </template>
