--- a/client/management/shops/edit/products/products.html
+++ b/client/management/shops/edit/products/products.html
@@ -1,7 +1,7 @@
 <template name="managementShopsEditProducts">
     <div class="products">
         <div class="container">
-            <h2>
+            <h2 class="page-header">
                 Products
                 <button class="createProductBtn pull-right" data-toggle="tooltip" data-placement="left" title="Add new product">
                     {{> iconAdd }}
