--- a/client/management/shops/edit/visibility/visibility.html
+++ b/client/management/shops/edit/visibility/visibility.html
@@ -2,13 +2,16 @@
     <div class="visibility">
         <form class="form-horizontal" role="form">
             <legend>Visibility</legend>
-            <p class="help-block">Information about visibility</p>
             <div class="checkbox">
                 <label>
                     <input type="checkbox" name="isPublic" checked="{{ isPublic }}" />
                     Visible to customers
                 </label>
             </div>
+            <p class="help-block">
+                This option controls visibility of the shop across all platforms.
+                If you want to hide shop on specific platform, use appropriate option for exact platform.
+            </p>
         </form>
     </div>
 </template>
