--- a/client/management/shops/edit/general/general.html
+++ b/client/management/shops/edit/general/general.html
@@ -6,24 +6,36 @@
                 <label for="shopTitle" class="col-sm-2 control-label">Title:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="title" id="shopTitle" value="{{ title }}" placeholder="Title" />
+                    <p class="help-block">
+                        Title of the shop. Would be used on all platforms to identify your shop.
+                    </p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="shopSubtitle" class="col-sm-2 control-label">Subtitle:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="subtitle" id="shopSubtitle" value="{{ subtitle }}" />
+                    <p class="help-block">
+                        Subtitle, would be used in some places to give short additional information about what shop really does.
+                    </p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="shopDescription" class="col-sm-2 control-label">Description:</label>
                 <div class="col-sm-10">
                     <textarea name="description" class="form-control" id="shopDescription">{{ description }}</textarea>
+                    <p class="help-block">
+                        Long description of the shop. Used only in shop's details page to give all information customer could be interested in.
+                    </p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="shopTax" class="col-sm-2 control-label">Tax rate:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="tax" id="shopTax" value="{{ payments.tax }}" />
+                    <p class="help-block">
+                        This option is used to add taxes to orders. Use tax rate of your state.
+                    </p>
                 </div>
             </div>
         </form>
