--- a/client/management/products/edit/images/images.html
+++ b/client/management/products/edit/images/images.html
@@ -1,13 +1,26 @@
 <template name="managementProductsEditImages">
     <div class="images">
-        <nav class="context-buttons">
-            <button class="uploadBtn btn btn-icon">
-                {{> iconUpload }}
-                <input type="file" name="logo" id="uploadLogoFile" accept="image/*" />
-            </button>
-        </nav>
-        {{ #if image }}
-        <img src="{{ image.url }}" />
-        {{ /if }}
+        <div class="viewState">
+            <nav class="context-buttons">
+                <button class="uploadBtn btn btn-icon">
+                    {{> iconUpload }}
+                    <input type="file" name="logo" id="uploadLogoFile" accept="image/*" />
+                </button>
+            </nav>
+            {{ #if image }}
+            <img src="{{ image.url }}" />
+            {{ /if }}
+        </div>
+        <div class="editState">
+            <nav class="context-buttons">
+                <button class="saveBtn btn btn-icon">
+                    {{> iconOk }}
+                </button>
+                <button class="cancelBtn btn btn-icon">
+                    {{> iconCancel }}
+                </button>
+            </nav>
+            <canvas id="canvas" height="100%" width="100%"></canvas>
+        </div>
     </div>
 </template>
