--- a/client/management/shops/edit/edit.html
+++ b/client/management/shops/edit/edit.html
@@ -23,6 +23,10 @@
             <h2 class="page-header">Additional</h2>
             {{> managementShopsEditTracking }}
         </div>
+        <div class="container">
+            <h2 class="page-header text-danger">Remove</h2>
+            {{> managementShopsEditRemove }}
+        </div>
         {{ /with }}
     </section>
 </template>
