--- a/client/management/products/edit/edit.html
+++ b/client/management/products/edit/edit.html
@@ -16,6 +16,10 @@
             {{> managementProductsEditInventoryManagement }}
         </div>
             {{> managementProductsEditReviews }}
+        <div class="container">
+            <h2 class="page-header text-danger">Remove</h2>
+            {{> managementProductsEditRemove }}
+        </div>
 
         {{ /with }}
     </div>
